fix: :bug: 优化滚动条颜色

--- a/styles/components/_scroller.scss
+++ b/styles/components/_scroller.scss
@@ -1,6 +1,6 @@
 //滚动条
-$scroll-color: $rc-border-3;
-$scroll-hover: $rc-border-3;
+$scroll-color: $scrollbar-color;
+$scroll-hover: $scrollbar-color;
 $scroll-bradius: $rc-bradius-max;
 
 :root {
