--- a/styles/utils/_placeholders.scss
+++ b/styles/utils/_placeholders.scss
@@ -33,6 +33,9 @@
     padding: 0 7px;
     background-color: $rc-component-button;
     color: $rc-text-secondary;
+    [theme-mode="dark"] & {
+      background-color: $gray-3;
+    }
 
     svg {
       width: 11px;
