fix: :bug: 修复暗黑模式下list-meta的颜色显示问题

--- a/styles/components/_list.scss
+++ b/styles/components/_list.scss
@@ -23,7 +23,7 @@ $list-item-bg-focus: $rc-component-bg-select;
 $list-button-bg-focus: $rc-component-button-select;
 
 $list-item-meta-color: $rc-text-placeholder;
-$list-item-meta-color-focus: $brand-4;
+$list-item-meta-color-focus: $rc-brand-focus;
 
 :root {
   // 列表
