--- a/styles/pages/dialog/_account.scss
+++ b/styles/pages/dialog/_account.scss
@@ -8,7 +8,7 @@ $dialog-account-button-bg-hover: $rc-brand-light;
     //账号
     .config-account__center:first-child {
       border-right: 1px solid $dialog-account-border;
-      margin: 16px 24px;
+      margin: 16px 0px;
 
       #agreeLogin+span+span {
         line-height: 20px;
@@ -32,17 +32,13 @@ $dialog-account-button-bg-hover: $rc-brand-light;
         flex: 1;
 
         .fn__hr--b+.fn__flex label {
-
-          // line-height: 20px;
-          input {
+          .b3-switch {
             transform: translateY(-1.8px);
+            margin-left: 8px;
           }
         }
       }
 
-      .b3-switch {
-        margin-left: 8px;
-      }
     }
 
     #activationCode {
@@ -50,6 +46,9 @@ $dialog-account-button-bg-hover: $rc-brand-light;
       padding: 1px 6px;
       top: 4px !important;
       right: 4px !important;
+      color:  $rc-text-secondary;
+      background-color: $rc-component-bg;
+      height: 22px;
 
       &:hover {
         background-color: $rc-component-button;
