--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -15,14 +15,15 @@
 
 :root {
   // 字体
-  --b3-font-family: "HarmonyOS Sans SC 01", "Noto Sans SC 01", "JetBrains Mono 01",
+  --b3-font-family: -apple-system, BlinkMacSystemFont, Segoe UI,
+    "HarmonyOS Sans SC 01", "Noto Sans SC 01", "JetBrains Mono 01",
     "Helvetica Neue", "Luxi Sans", "DejaVu Sans", "Hiragino Sans GB",
     "Microsoft Yahei", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
-  --b3-font-family-code: "JetBrains Mono 01", "HarmonyOS Sans SC 01", "Noto Sans SC 01", mononoki,
-    Consolas, "Liberation Mono", Menlo, Courier, monospace, "Apple Color Emoji",
-    "Segoe UI Emoji", "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
-    "EmojiSymbols";
+  --b3-font-family-code: "JetBrains Mono 01", "HarmonyOS Sans SC 01",
+    "Noto Sans SC 01", mononoki, Consolas, "Liberation Mono", Menlo, Courier,
+    monospace, "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji",
+    "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
   --b3-font-family-graph: mononoki;
   --b3-font-family-emoji: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI",
     "Apple Color Emoji", "Twemoji Mozilla", "Noto Color Emoji", "Android Emoji";
