fix: :bug: 修复暗黑模式下的代码块样式问题

--- a/styles/pages/editor/_block-code.scss
+++ b/styles/pages/editor/_block-code.scss
@@ -109,6 +109,9 @@ $code-action-bg-active: $gray-4;
 
       &:hover {
         background-color: $code-action-bg-active;
+        [theme-mode="dark"] & {
+          background-color: $gray-6;
+        }
       }
     }
 
@@ -130,6 +133,9 @@ $code-action-bg-active: $gray-4;
 
       &:hover {
         background-color: $code-action-bg-active;
+        [theme-mode="dark"] & {
+          background-color: $gray-6;
+        }
       }
     }
   }
