fix: :bug: 修复超链接中行内代码块的样式

--- a/styles/pages/editor/_block-code.scss
+++ b/styles/pages/editor/_block-code.scss
@@ -182,3 +182,7 @@ $code-action-bg-active: $gray-4;
 .protyle-wysiwyg code:not(.hljs) {
   margin: 0 3px;
 }
+
+[data-type="a"] code{
+  padding: 0 0.4em !important;
+}
