fix: :bug: 修复超级块内各类块的内边距问题

--- a/styles/pages/editor/_block-super.scss
+++ b/styles/pages/editor/_block-super.scss
@@ -13,8 +13,8 @@
       padding: 12px 0;
       margin-bottom: 20px;
       > [data-node-id] {
-        padding-left: 20px;
-        padding-right: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
       }
       &[style*="error"] {
         background-color: $rc-error-light !important;
