--- a/styles/pages/editor/_protyle.scss
+++ b/styles/pages/editor/_protyle.scss
@@ -11,18 +11,17 @@ $pre-action-bg-focus: $rc-component-bg-select;
   .b3-typography,
   .protyle-wysiwyg {
     box-sizing: content-box;
-    padding: 16px #{$content-margin} 235px !important;
+    padding: 16px #{$content-margin} 30vh !important;
     max-width: #{$editor-width};
     width: auto !important;
     background-color: $protyle-bg;
 
-    >div:not(.sb):not(.list):not(.table):not([data-type="NodeBlockQueryEmbed"]) {
+    > div:not(.sb):not(.list):not(.table):not([data-type="NodeBlockQueryEmbed"]) {
       padding-left: 2px !important;
       padding-right: 2px !important;
     }
 
-    [data-node-id][fold="1"]:not(.li):not([data-type=NodeHeading]) {
-
+    [data-node-id][fold="1"]:not(.li):not([data-type="NodeHeading"]) {
       &.p {
         height: auto !important;
         line-height: 1.74 !important;
@@ -36,8 +35,9 @@ $pre-action-bg-focus: $rc-component-bg-select;
         height: 48px;
 
         .p {
-          opacity: .68;
+          opacity: 0.68;
           line-height: 1.625 !important;
+          font-size: 15px !important;
         }
       }
 
@@ -57,7 +57,7 @@ $pre-action-bg-focus: $rc-component-bg-select;
         }
       }
 
-      &.table{
+      &.table {
         height: 44px;
       }
     }
@@ -65,7 +65,6 @@ $pre-action-bg-focus: $rc-component-bg-select;
     div[data-type] {
       border-radius: $block-border-radius;
     }
-
   }
 
   .protyle-preview {
@@ -95,17 +94,16 @@ $pre-action-bg-focus: $rc-component-bg-select;
       }
 
       &--current {
-        background-color: $pre-action-bg-focus  !important;
+        background-color: $pre-action-bg-focus !important;
 
         &:hover {
-          color: $rc-brand  !important;
+          color: $rc-brand !important;
         }
       }
     }
 
     .b3-typography {
       max-width: #{$editor-width} !important;
-
 
       &[style*="360px"] {
         padding: 8px 16px !important;
@@ -125,7 +123,6 @@ $pre-action-bg-focus: $rc-component-bg-select;
 
   &#searchPreview,
   &.block__edit {
-
     .b3-typography,
     .protyle-wysiwyg {
       padding: 16px #{$content-margin} !important;
@@ -145,9 +142,8 @@ $pre-action-bg-focus: $rc-component-bg-select;
 
 .protyle-wysiwyg--select,
 .protyle-wysiwyg--hl {
-  background-color: $highlight-bg  !important;
+  background-color: $highlight-bg !important;
 }
-
 
 .protyle-scroll {
   right: -60px;
