fix: :bug: 优化行内图片样式

--- a/styles/pages/editor/_block-img.scss
+++ b/styles/pages/editor/_block-img.scss
@@ -16,11 +16,11 @@
         }
 
         img {
-            margin-top: 5px;
+            margin: 5px 0;
         }
 
         .protyle-action__drag {
-            right: 0;
+            right: 3px;
             top: calc(50% - 50px / 2);
             height: 50px;
             display: block;
