--- a/styles/pages/editor/_block-super.scss
+++ b/styles/pages/editor/_block-super.scss
@@ -42,6 +42,16 @@
           color: $rc-brand !important;
           background-color: $brand-2 !important;
         }
+        .code-block {
+          background-color: $brand-2 !important;
+          .protyle-icon,
+          .protyle-action__language:hover {
+            background-color: $brand-3 !important;
+          }
+          .protyle-icon:hover {
+            background-color: $brand-4 !important;
+          }
+        }
       }
       &[style*="success"] {
         background-color: $rc-success-light !important;
