--- a/styles/themes/tdesign/light.scss
+++ b/styles/themes/tdesign/light.scss
@@ -108,10 +108,10 @@
   }
 
   // 文本颜色
-  --text-primary: rgba(0, 0, 0, 95%); // 色彩-文字-主要
-  --text-secondary: rgba(0, 0, 0, 65%); // 色彩-文字-次要
-  --text-placeholder: rgba(0, 0, 0, 45%); // 色彩-文字-占位符/说明
-  --text-disabled: rgba(0, 0, 0, 31%); // 色彩-文字-禁用
+  --text-primary: rgba(0, 0, 0, 90%); // 色彩-文字-主要
+  --text-secondary: rgba(0, 0, 0, 60%); // 色彩-文字-次要
+  --text-placeholder: rgba(0, 0, 0, 40%); // 色彩-文字-占位符/说明
+  --text-disabled: rgba(0, 0, 0, 30%); // 色彩-文字-禁用
   --text-anti: #fff; // 色彩-文字-反色
   --text-brand: var(--brand-8); // 色彩-文字-品牌
   --text-link: var(--brand-8); // 色彩-文字-链接
@@ -172,15 +172,15 @@
 
   // 背景色
   --bg-base: var(--gray-1); // 色彩 - page
-  --bg-page: #fff; // 色彩 - page
+  --bg-page: 255, 255, 255; // 色彩 - page
   --bg-component: var(--gray-1); // 色彩  - 组件
-  --bg-popper: #fff; // 色彩 - 容器
+  --bg-popper: 255, 255, 255; // 色彩 - 容器
   --bg-brand: var(--brand-1);
 
   // 填充色
-  --fill-base: var(--gray-2); // 色彩 - page
+  --fill-base: var(--gray-3); // 色彩 - page
   --fill-page: var(--gray-1); // 色彩 - page
-  --fill-component: var(--gray-2); // 色彩  - 组件
+  --fill-component: var(--gray-3); // 色彩  - 组件
   --fill-popper: var(--gray-1); // 色彩 - 容器
   --fill-brand: var(--brand-2);
 
